--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -10,12 +10,12 @@
     {% extends 'base.html' %}
     {% block content %}
 
-    <h1>About the Guitar Collector</h1>
+    <h1>Home is where my guitars are</h1>
     <hr />
-    <p>I really like guitars...like a lot...</p>
+    <p>I like guitars......</p>
     <div class="imgs-container">
         <div class="img-container">
-            <img src="../static/images/White_Strat.jpg">
+            <img src="../static/images/Fender_Telecasters.jpg">
         </div>
     </div>        
 
