--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,6 +9,7 @@
     <title>Guitar Collector</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
     <header class="navbar-fixed">
@@ -18,8 +19,9 @@
                     <li><a href="/" class="left brand-logo">&nbsp;&nbsp;GuitarCollector</a></li>
                 </ul>
                 <ul class="right">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/guitars">View All My Guitars</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'guitars_create' %}">Add a Guitar</a></li>
+                    <li><a href="{% url 'index' %}">View All My Guitars</a></li>
                 </ul>
             </div>
         </nav>
