--- a/main_app/templates/guitars/index.html
+++ b/main_app/templates/guitars/index.html
@@ -4,12 +4,14 @@
 <h1>Guitar List</h1>
 
 {% for guitar in guitars %}
-    <div class="card">
-        <div class="card-content">
-            <span class="card-title">{{ guitar.name }}</span>
-            <p>Type: {{ guitar.brand }} {{ guitar.model }}</p>
-            <p>Description: {{ guitar.description }}</p>
-        </div>
+    <div class="index-card">
+        <a href="{% url 'detail' guitar.id %}">
+            <div class="index-card-content">
+                <span class="card-title">{{ guitar.name }}</span>
+                <p>Type: {{ guitar.make }} {{ guitar.model }}</p>
+                <p>Description: {{ guitar.description }}</p>
+            </div>
+        </a>
     </div>
 {% endfor %}
 
