--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -12,7 +12,8 @@
 
     <h1>About the Guitar Collector</h1>
     <hr />
-    <p>I really like guitars...like a lot...</p>
+    <p>Use this tool to track all of the guitars in your collection
+        and log all of the hours you have practiced!</p>
     <div class="imgs-container">
         <div class="img-container">
             <img src="../static/images/White_Strat.jpg">
