--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Guitar Collector</title>
-</head>
-<body>
-    {% extends 'base.html' %}
-    {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 
     <h1>Home is where my guitars are</h1>
     <hr />
-    <p>I like guitars......</p>
+    <p>I have too many guitars....and I need to keep track of them!</p>
     <div class="imgs-container">
         <div class="img-container">
             <img src="../static/images/Fender_Telecasters.jpg">
@@ -21,6 +12,4 @@
 
 
 
-    {% endblock %}
-</body>
-</html>
+{% endblock %}
